starlark-rust/starlark/src/typing/tests/golden/bit_or_return_int.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Code:
test = int | 3

def foo() -> test:
    pass

No errors.

Approximations:
Approximation: Unknown type = "Span { begin: Pos(30), end: Pos(34) }"

Compiler typechecker (eval):
Compiler typechecker and eval results mismatch.

error: Type `3` is not a valid type annotation
 --> filename:2:8
  |
2 | test = int | 3
  |        ^^^^^^^
  |
